force-app/main/default/objects/Branch_Unit__c/Branch_Unit__c.object-meta.xml
<CustomObject>
    <label>Branch Unit 2</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Branch Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branch Units</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>