force-app/main/default/objects/Branch_Unit__c/fields/BranchCode__c.field-meta.xml
<CustomField>
    <fullName>BranchCode__c</fullName>
    <formula>RIGHT(&apos;00000&apos;+ Branch_Code__c,5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BranchCode</label>
    <type>Text</type>
</CustomField>