force-app/main/default/objects/Branch_Unit__c/fields/Kanwil__c.field-meta.xml
<CustomField>
    <fullName>Kanwil__c</fullName>
    <label>Kanwil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Kanwil</valueSetName>
    </valueSet>
</CustomField>