force-app/main/default/objects/Branch_Unit__c/fields/Kode_Cabang__c.field-meta.xml
<CustomField>
    <fullName>Kode_Cabang__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Kode Cabang</label>
    <length>255</length>
    <type>Text</type>
</CustomField>