force-app/main/default/objects/Branch_Unit__c/fields/Uker_Type__c.field-meta.xml
<CustomField>
    <fullName>Uker_Type__c</fullName>
    <formula>if( AND(CONTAINS(Name, &quot;KANWIL&quot;), Tipe_Uker__c = &apos;CABANG&apos;), &apos;RO&apos; , if( AND(Tipe_Uker__c = &apos;CABANG&apos;, NOT(CONTAINS(Name, &quot;KANWIL&quot;))), &apos;KC&apos;, if( Tipe_Uker__c = &apos;KANTOR KAS&apos;, &apos;KK&apos;, if( Tipe_Uker__c = &apos;UNIT&apos;, &apos;U&apos;, Tipe_Uker__c) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Uker Type</label>
    <type>Text</type>
</CustomField>