force-app/main/default/objects/Branch_Unit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Kanwil__c</columns>
    <columns>NAME</columns>
    <columns>Branch_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Unit_Type__c</columns>
    <columns>Kode_Cabang__c</columns>
    <columns>BranchCode__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BranchCode__c</field>
        <operation>equals</operation>
        <value>01178</value>
    </filters>
    <label>All</label>
</ListView>